# token-demo

./: Anchor.toml  package.json
programs/coin98_gift/: Cargo.toml
programs/coin98_gift/src/: context.rs  event.rs  lib.rs
programs/coin98_token/: Cargo.toml
programs/coin98_token/src/: context.rs  lib.rs  state.rs
services/: demoToken.service.ts  instructions.service.ts
test/: token.spec.ts
